fixes https://github.com/ajdamico/asdfree/issues/308

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,4 +44,9 @@ artifacts:
 environment:
     USE_RTOOLS: true
     R_ARCH: x64
-# this_build_matrix
+    matrix:
+    - this_sample_break: 1
+    - this_sample_break: 2
+    - this_sample_break: 3
+    - this_sample_break: 4
+    - this_sample_break: 5
