--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,9 @@ before_install:
 - sudo /etc/init.d/postgresql stop
 - sudo free -m -t
 
-# this_build_matrix
+env:
+ - this_sample_break=1
+ - this_sample_break=2
+ - this_sample_break=3
+ - this_sample_break=4
+ - this_sample_break=5
